--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@heroui/spinner": "^2.2.23",
     "@material-tailwind/html": "^3.0.0-beta.7",
+    "@tanstack/react-query": "^5.90.11",
+    "axios": "^1.13.2",
     "framer-motion": "^12.23.12",
     "lottie-react": "^2.4.1",
     "lucide-react": "^0.544.0",
